Footer y el sistema de registro e inicio de sesión

--- a/Cinemux/html/index.html
+++ b/Cinemux/html/index.html
@@ -18,6 +18,7 @@
         <a href="#Animación">Animación</a>
         <a href="#comedia">Comedia</a>
         <a href="#fantasia">Fantasía</a>
+        <a href="/html/inicio.html">Iniciar Sesión</a>
     </nav>
 
     <div class="container">
@@ -41,6 +42,7 @@
 
         </section>
         
+
 
         <div class="Elementos">
             <h3>Avatar: El Sentido del Agua</h3>
@@ -325,5 +327,8 @@
     </div>
     <a href="#a" class="arriba"><img src="/img/arriba.png" width="50px" height="50px"></a>
 
+<footer> <p>CineMux 2024. Todos los derechos reservados.</p></footer>
+
 </body>
+
 </html>
